WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225738
Subtitles in Safari fail to appear after switching language
https://bugs.webkit.org/show_bug.cgi?id=225738
Summary
Subtitles in Safari fail to appear after switching language
Peng Liu
Reported
2021-05-12 23:20:07 PDT
Subtitles in Safari fail to appear after switching language
Attachments
[fast-cq] Patch
(7.84 KB, patch)
2021-05-12 23:49 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peng Liu
Comment 1
2021-05-12 23:49:29 PDT
Created
attachment 428463
[details]
[fast-cq] Patch
Peng Liu
Comment 2
2021-05-12 23:50:18 PDT
<
rdar://76990369
>
EWS
Comment 3
2021-05-13 07:12:29 PDT
Committed
r277433
(
237681@main
): <
https://commits.webkit.org/237681@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 428463
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug